# django_project

./: .gitignore  db.sqlite3  pyproject.toml
core/: forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_ip_addresses_ip.py  0003_vlans.py
core/static/css/: style.css
core/templates/core/: core.html
django_project/: settings.py  urls.py
