[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["Michael Cote <michael.james.cote@gmail.com>"]
readme = "README.md"
packages = [{include = "django_project"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
